# Darlene-X-2.0

./: .gitignore  DEVELOPER_GUIDE.md  DIRECTORY_STRUCTURE.md  FRONTEND_ARCHITECTURE.md  MANIFEST.md  QUICK_START.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_COMPLETE.md  apk_analyzer (1).html  apk_analyzer.html  darlene_x.html  pyproject.toml  requirements.txt
Understanding_logical_flow/: function.py  values.py  views.py
darlene_x/: How to structure the frameworkHere'.txt  android_apk_static_analysis_playbook.html  cli.py
darlene_x/analysers/: __init__.py  code.py  manifest.py  secrets.py  signature.py  unpack.py
darlene_x/analysers/novel/: __init__.py
darlene_x/core/: __init__.py  base.py  orchestrator.py  result_store.py  tool_runner.py
frontend/: README.md  index.html
frontend/css/: style.css
frontend/js/: app.js
frontend/js/modules/: api-analyzer.js  apk-parser.js  encryption-detector.js  llm-integration.js  manifest-analyzer.js  permission-analyzer.js  report-generator.js  signature-analyzer.js  storage.js
web/: README.md  index.html
web/js/engine/: detection-rules.js  wasm-bridge.js
web/wasm/: hotpath.wasm  hotpath.wat
