[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darlene-x-2"
version = "2.0.0"
description = "Darlene-X_2.0 — offline static Android APK malware analysis (CLI + browser)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Security Research Team"}]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "androguard>=4.0.0",
    "networkx>=3.2.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
yara = ["yara-python>=4.2.0"]
intel = ["httpx>=0.27.0"]

[project.scripts]
darlene-x-2 = "darlene_x.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["darlene_x*"]

[tool.setuptools.package-data]
darlene_x = ["rules/yara/*.yar", "templates/*.html"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
select = ["E", "F", "W"]
line-length = 100
target-version = "py310"
